--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "root",
+  "scripts": {
+    "test": "jest"
+  },
   "private": true,
   "devDependencies": {
+    "@types/jest": "^24.0.11",
+    "jest": "^24.3.1",
     "lerna": "^3.13.1",
+    "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333"
   }
 }
