--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,13 +14,15 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
+    "fast-deep-equal": "^2.0.1",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.122",
-    "jest": "^24.3.1"
+    "@types/uuid": "^3.4.4",
+    "uuid": "^3.3.2"
   }
 }
