--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "strict": true,
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "sourceMap": true,
     "lib": [
       "esnext"
