--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "ui": "lerna exec --scope @devsite/ui -- npm run serve",
+    "test": "lerna exec -- npm run test"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "jest": "^24.3.1",
