--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
+    "@zerollup/ts-transform-paths": "^1.7.0",
     "jest": "^24.3.1",
     "lerna": "^3.13.1",
+    "rollup": "^1.7.0",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-typescript2": "^0.20.1",
     "ts-jest": "^24.0.0",
     "tslint": "^5.14.0",
     "tslint-config-airbnb": "^5.11.1",
+    "ttypescript": "^1.5.6",
     "typescript": "^3.3.3333"
   }
 }
