--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "lib": [
       "esnext"
-    ]
+    ],
+    "declaration": true
   },
   "exclude": [
     "node_modules"
