--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,7 +18,8 @@
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "start": "ts-node -O '{\"module\": \"commonjs\"}' ./api/index.ts"
   },
   "dependencies": {
     "@devsite/core": "^0.0.0",
@@ -29,6 +30,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/jest": "^23.1.4",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-e2e-cypress": "^3.5.0",
@@ -37,7 +39,10 @@
     "@vue/cli-service": "^3.5.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "ts-jest": "^23.0.0",
+    "ts-node": "^8.0.3",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
   }
