--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,9 @@
   },
   "dependencies": {
     "@devsite/core": "^0.0.0",
+    "@devsite/infrastructure": "^0.0.0",
+    "express": "^4.16.4",
+    "express-promise-router": "^3.0.3",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -40,7 +43,6 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
     "ts-jest": "^23.0.0",
     "ts-node": "^8.0.3",
     "typescript": "^3.2.1",
