--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,8 +24,7 @@
     "lint:fix": "tslint ./src/**/*.ts ./__tests__/**/*.ts --project ../../tsconfig.json --fix"
   },
   "dependencies": {
-    "fast-deep-equal": "^2.0.1",
-    "lodash": "^4.17.11"
+    "fast-deep-equal": "^2.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.122",
