--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -25,9 +25,12 @@
   },
   "dependencies": {
     "@devsite/core": "^0.0.0",
+    "@types/jest": "^24.0.12",
+    "lodash": "^4.17.11",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.123",
     "@types/uuid": "^3.4.4"
   }
 }
