--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ui": "lerna exec --scope @devsite/ui -- npm run serve",
     "api": "lerna exec --scope @devsite/ui -- npm start",
-    "build": "lerna exec -- npm run build",
+    "build:modules": "lerna exec --ignore @devsite/ui -- npm run build",
+    "build:all": "lerna exec -- npm run build",
     "test": "lerna exec -- npm run test"
   },
   "devDependencies": {
